Fixed translation to look better on smaller devices

--- a/src/locales/ru/about.json
+++ b/src/locales/ru/about.json
@@ -9,7 +9,7 @@
         "core": "Ядро",
         "ceo": "Исполнительный директор",
         "cto": "Технический директор",
-        "cooAndGrowth": "Операционный и стратегический директор",
+        "cooAndGrowth": "Директор по развитию",
         "all": "Все",
         "allMembers": "Все члены"
       }
@@ -31,7 +31,7 @@
       "title": "Наши инвесторы"
     },
     "positions": {
-      "title": "Открытые вакансии",
+      "title": "Вакансии",
       "available": "Открыто 3 вакансии",
       "join": "Присоединиться к",
       "roles": {
