--- a/src/locales/ru/founding-members.json
+++ b/src/locales/ru/founding-members.json
@@ -74,10 +74,10 @@
         },
         "contribute": {
           "text": "Вносите вклад в проект:",
-          "contributions": "<0><0>обучение других участников</0><0>публикация постов в блоге и написание документации</0><0>создание и публикация видеоконтента</0><0>участие в ролях платформы в тестнете</0><0>обнаружение и отправка отчетов о багах и ошибках</0><0>участие в официальных баунти</0><0>дизайн и креатив</0></0>"
+          "contributions": "<0><0>обучение участников</0><0>публикации в блоге и написание документации</0><0>публикация видеоконтента</0><0>участие в ролях тестнета</0><0>отправка отчетов о багах и ошибках</0><0>участие в баунти</0><0>дизайн и креатив</0></0>"
         },
-        "report": "Регулярно подавайте отчеты о деятельности",
-        "earnPoints": "Зарабатывайте баллы в таблице лидеров",
+        "report": "Подавайте отчеты о деятельности",
+        "earnPoints": "Зарабатывайте баллы",
         "becomeFM": "Становитесь членом-основателем!",
         "buttonText": "Перейти в Discord",
         "excluded": "Страны, не участвующие в программе: ",
@@ -118,7 +118,7 @@
       },
       "title": "Отправить отчет о проделанной работе",
       "progressItem": {
-        "accountInfo": "Информация об аккаунте",
+        "accountInfo": "Аккаунт",
         "keyFile": "Файл ключа",
         "summary": "Отчет",
         "acceptTerms": "Принять условия",
