--- a/src/locales/ru/landing.json
+++ b/src/locales/ru/landing.json
@@ -4,7 +4,7 @@
       "description": "Joystream - видеоплатформа, которая принадлежит, контролируется и управляется своими пользователями."
     },
     "hero": {
-      "title": "Видеоплатформа DAO",
+      "title": "DAO платформа для видео",
       "subtitle": "Joystream - видеоплатформа, которая принадлежит,<0/> контролируется и управляется своими пользователями.",
       "metrics": {
         "mainTitle": "Метрики тестнета",
@@ -124,7 +124,7 @@
       }
     },
     "earnTokens": {
-      "title": "Зарабатывайте токены основной сети, деньги и влияние."
+      "title": "Получите токены основной сети, деньги и влияние."
     }
   }
 }
