--- a/src/locales/ru/privacy-policy.json
+++ b/src/locales/ru/privacy-policy.json
@@ -4,7 +4,7 @@
       "description": "Политика конфиденциальности и использования файлов cookie Joystream"
     },
     "hero": {
-      "title": "Политика конфиденциальности и использования файлов cookie",
+      "title": "Политика приватности и использования файлов cookie",
       "text": "<0><0>Jsgenesis уважает Вашу приватность.</0><1/><1/>Эта Политика Конфиденциальности (\"Политика Конфиденциальности\") и Политика использования файлов cookie (\"Политика использования файлов cookie\") объясняют, как Jsgenesis (\"Jsgenesis\", \"Компания\", \"Мы\", \"Нас\", \"Наш\") собирает и использует данные и информацию, когда Вы (\"Пользователь\") используете любой из продуктов Joystream, разработанных организацией, именуемой <3>Joystream</3> в GitHub. Эти продукты (вместе называемые \"Программное обеспечение\") включают, но не ограничиваются всеми страницами домена <6>joystream.org</6> (\"Веб-сайт\"), <10>нодой Joyful</10> (\"Полная нода\"), <14>нодой хранения Colossus</14> (\"Нода хранения\"), пользовательским интерфейсом Pioneer, либо <18>размещенным самостоятельно</18>, либо <22>размещенным у Нас</22> (\"Приложение\").</0>"
     },
     "terms": {
