add Tokenomics to all locales

--- a/src/locales/ru/general.json
+++ b/src/locales/ru/general.json
@@ -108,7 +108,8 @@
     "usefulLinks": {
       "title": "Полезные ссылки",
       "hiring": "Вакансии",
-      "brandGuidance": "Правила использования айдентики"
+      "brandGuidance": "Правила использования айдентики",
+      "tokenomics": "Tokenomics"
     },
     "followUs": "Следите за новостями"
   },
