--- a/src/locales/zh/general.json
+++ b/src/locales/zh/general.json
@@ -108,7 +108,8 @@
     "usefulLinks": {
       "title": "Useful links",
       "hiring": "We are hiring!",
-      "brandGuidance": "Brand guidance"
+      "brandGuidance": "Brand guidance",
+      "tokenomics": "Tokenomics"
     },
     "followUs": "Follow us"
   },
