--- a/src/locales/en/athens.json
+++ b/src/locales/en/athens.json
@@ -1,59 +1,61 @@
 {
-  "athens": {
+  "Athen": {
     "siteMetadata": {
-      "description": "Explore the Athens testnet"
+      "description": "Entdecke das Athen-Testnetzwerk"
     },
     "hero": {
-      "title": "Athens Network",
-      "text": "Explore available roles and pick the one that suits you best. Influence the platform's development and earn real money in the process.",
-      "chipText": "What is this?"
+      "Titel": "Athen-Netzwerk",
+      "text": " Entdecke die verfügbaren Rollen und wähle diejenige, die am besten zu dir passt. Beeinflusse die Entwicklung der Plattform und verdienen dabei echtes Geld.",
+      "chipText": "Was ist das?"
     },
     "heroCard": {
-      "text": "AFTER LAUNCHING 17 / 04 / 19 <0/> THE NETWORK WAS UPGRADED TO <1>ACROPOLIS</1> ON"
+      "text": "NACH DEM START AM 17 / 04 / 19 <0/> WURDE DAS NETZWERK AUF <1>ACROPOLIS</1> AUFGERÜSTET"
     },
     "modal": {
-      "title": "Owl of Athena",
-      "text": "<0>In Greek mythology, a little owl (Athene noctua)</0> traditionally represents or accompanies Athena, the virgin goddess of wisdom. Because of such association, the bird — often referred to as the \"owl of Athena\" — has been used as a symbol of knowledge, wisdom, perspicacity and erudition throughout the Western world."
+      "title": "Eule der Athene",
+      "text": "<0>In der griechischen Mythologie stellt eine kleine Eule (Athene noctua)</0> traditionell Athene, die jungfräuliche Göttin der Weisheit, dar oder begleitet sie. Aufgrund dieser Assoziation wurde der Vogel - oft als "Eule der Athene" bezeichnet - in der gesamten westlichen Welt als Symbol für Wissen, Weisheit, Scharfsinn und Gelehrsamkeit verwendet."
     },
     "criticalDocuments": {
-      "title": "Critical Documents",
+      "title": "Kritische Dokumente",
       "fullSpecifications": {
-        "title": "Full Specifications",
-        "text": "No specifications was published for Athens."
+        "title": "Vollständige Spezifikationen",
+        "text": "Für Athen wurden keine Spezifikationen veröffentlicht."
       },
       "releasePlan": {
-        "title": "Release Plan",
-        "text": "Read the release plan as it was made during the planning stage, and learn more about how the development evolved."
+        "title": "Freigabeplan",
+        "text": "Lesen Sie den Freigabeplan, wie er in der Planungsphase erstellt wurde, und erfahren Sie mehr über den Verlauf der Entwicklung."
       }
     },
     "testnetGoals": {
-      "title": "Testnet Goals",
-      "subtitle": "The goals below are a simplified representation of the Key Results listed in our Release <0>OKR</0>",
+      "title": "Ziele des Testnetzwerks",
+      "subtitle": "Die nachstehenden Ziele sind eine vereinfachte Darstellung der in unserem Release <0>OKR</0> aufgeführten Schlüsselergebnisse",
       "goals": {
         "media": {
-          "title": "Enable media on the platform",
-          "text": "As a \"user governed media platform\", allowing users to upload and consume and content was a major goal for us."
+          "title": "Medien auf der Plattform aktivieren",
+          "text": "Als \"nutzergesteuerte Medienplattform\", war es ein wichtiges Ziel für uns, den Nutzern das Hochladen und Konsumieren von Inhalten zu ermöglichen."
         },
-        "memberships": {
-          "title": "Introduce platform memberships",
-          "text": "Although we are building an open blockchain in the sense that users are free to send tokens as they like, the Joystream experience is about having the platform users own, operate and govern the platform. We are agnostic on exactly what parts of the platform will be reserved for members, some actions will require and extra level of screening and accountability."
+        "Mitgliedschaften": {
+          "title": "Plattform-Mitgliedschaften einführen",
+          "text": "Obwohl wir eine offene Blockchain in dem Sinne aufbauen, dass es den Nutzern freisteht, Token nach Belieben zu versenden, geht es bei Joystream darum, dass die Plattformnutzer die Plattform besitzen, betreiben und steuern. Wir wissen nicht genau, welche Teile der Plattform für Mitglieder reserviert sein werden, aber einige Aktionen werden ein zusätzliches Maß an Kontrolle und Verantwortlichkeit erfordern."
         },
         "storageNode": {
-          "title": "Build and release the storage node",
-          "text": "Although a storage node was built and used to host and distribute the platform content, it had some bugs making it unable to sync between clients and required a hardcoded liaison."
+          "title": "Bau und Freigabe des Speicherknotens",
+          "text": "Obwohl ein Speicherknoten gebaut und verwendet wurde, um den Inhalt der Plattform zu hosten und zu verteilen, wies er einige Fehler auf, die dazu führten, dass er nicht zwischen Clients synchronisiert werden konnte und eine hartkodierte Verbindung erforderte."
         },
         "runtimeUpgrade": {
-          "title": "Upgrade the runtime through a Council vote",
-          "text": "The intention was for Jsgenesis to create a proposal for a <0>runtime upgrade</0> and have the Council vote on it. If the Council reached quorum, the consensus rules of the system would automatically get upgraded in flight. Unfortunately, the <1>Sparta network crashed</1> before we reached this stage, and had to start Athens as a new chain with a new genesis block."
+          "title": "Upgrade der Laufzeit durch eine Ratsabstimmung",
+          "text": "Die Absicht war, dass Jsgenesis einen Vorschlag für ein <0>Runtime-Upgrade</0> erstellt und den Rat darüber abstimmen lässt. Wenn der Rat das Quorum erreicht, würden die Konsensregeln des Systems automatisch im Flug aktualisiert werden. Leider stürzte das <1>Sparta-Netzwerk</1> ab, bevor wir dieses Stadium erreichten, und wir mussten Athen als neue Kette mit einem neuen Genesis-Block starten."
         }
       }
     },
     "roles": {
-      "title": "Roles available on the Athens testnet"
+      "title": "Im Athen-Testnetzwerk verfügbare Rollen"
     },
     "map": {
-      "title": "The city of Athens",
-      "text": "<0>Athens is the capital of Greece.</0> It was also at the heart of Ancient Greece, a powerful civilisation and empire. The city is still dominated by 5th-century BC landmarks, including the Acropolis, a hilltop citadel topped with ancient buildings like the colonnaded Parthenon temple. <1/><1/> We chose the name Athens as, like our previous testnets, Mesopotamia and Sparta, the ancient Athens' historical significance in the development towards modern democracy and the rule of law. <1/><1/> <2> <0/> Explore previous testnet</2>"
+      "title": "Die Stadt Athen",
+      "text": "<0>Athen ist die Hauptstadt Griechenlands.</0> Es war auch das Herz des antiken Griechenlands, einer mächtigen Zivilisation und eines Reiches. Die Stadt wird immer noch von Wahrzeichen aus dem 5. Jahrhundert v. Chr. dominiert, darunter die Akropolis, eine auf einem Hügel gelegene Zitadelle mit antiken Gebäuden wie dem Parthenon-Tempel  <1/><1/> Wir haben den Namen Athen gewählt, weil das antike Athen, wie auch unsere vorherigen Testnetzwerke Mesopotamien und Sparta, eine historische Bedeutung für die Entwicklung hin zu moderner Demokratie und Rechtsstaatlichkeit hat. <1/><1/> <2> <0/> Erforsche das vorherige Testnetzwerk</2>"
     }
   }
 }
+
+
